api-gateway/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: my-project
spec:
  selector:
    app: api-gateway
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: LoadBalancer
